# GLUTCraft

./: ..gitignore.un~  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  README.md  cmake_install.cmake  install_manifest.txt
docs/: CNAME  index.html
include/: dimconv.h  glutcraft.h  utils.h
include/glutcraft/: debugscreen.h  dimconv.h  movement.h
src/: dbgscreen.c  dimconv.c  main.c  movement.c  utils.c
