cmake_minimum_required (VERSION 2.6)
project (GLUTCraft)
set (PROJECT_DIR .)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set (SODIR lib)
if(WIN32)
	set (SODIR bin)
endif(WIN32)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
set (PROJECT_SOURCE_DIR "${PROJECT_DIR}/src")
set (PROJECT_INCLUDE_DIR "${PROJECT_DIR}/include")
include_directories ("${PROJECT_INCLUDE_DIR}")
add_library (dimconv SHARED "${PROJECT_SOURCE_DIR}/dimconv.c")
add_executable (GLUTCraft "${PROJECT_SOURCE_DIR}/main.c")
if(WIN32)
	target_link_libraries (GLUTCraft opengl32 glu32 freeglut dimconv)
endif(WIN32)
if(UNIX)
	target_link_libraries (GLUTCraft GL GLU glut dimconv)
endif(UNIX)
install (TARGETS GLUTCraft DESTINATION bin)
install (TARGETS dimconv DESTINATION ${SODIR})
install (FILES include/dimconv.h DESTINATION include)
