cmake_minimum_required (VERSION 2.6)
project (GLUTCraft)
set (GL_LIBS GL GLU glut)
if(WIN32)
	set (GL_LIBS opengl32 glu32 freeglut)
endif(WIN32)
set (PROJECT_DIR .)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
set (PROJECT_SOURCE_DIR "${PROJECT_DIR}/src")
set (PROJECT_INCLUDE_DIR "${PROJECT_DIR}/include")
include_directories ("${PROJECT_INCLUDE_DIR}")
add_library (dimconv SHARED "${PROJECT_SOURCE_DIR}/dimconv.c")
add_library (dbgscreen SHARED "${PROJECT_SOURCE_DIR}/dbgscreen.c")
target_link_libraries(dbgscreen dimconv ${GL_LIBS})
add_executable (glutcraft "${PROJECT_SOURCE_DIR}/main.c")
target_link_libraries(glutcraft dimconv dbgscreen ${GL_LIBS})
install (TARGETS glutcraft dimconv dbgscreen
	RUNTIME DESTINATION bin
	ARCHIVE DESTINATION lib
)
install (DIRECTORY include DESTINATION ${CMAKE_INSTALL_PREFIX})
